# pm

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: db.py  main.py
backend/app/static/: index.html
backend/tests/: test_db.py  test_main.py
docs/: DATABASE.md  PLAN.md
frontend/: AGENTS.md
frontend/src/components/: AuthGate.test.tsx  AuthGate.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  smoke-test.sh  start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
